# auto_test

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
sample_v_project/: main.v  main_test.v
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: generate.rs  mod.rs
src/core/: mod.rs  models.rs  v_lang.rs
src/core/analyzer/: mod.rs  rust_analyzer.rs  ts_analyzer.rs
src/core/generator/: mod.rs  rust_gen.rs  ts_gen.rs  v_gen.rs
src/utils/: fs.rs
tests/: ._target_package_auto_test-0.1.0_src_cli_generate_tests.rs  ._target_package_auto_test-0.1.0_src_core_analyzer_rust_analyzer_tests.rs  ._target_package_auto_test-0.1.0_src_core_analyzer_ts_analyzer_tests.rs  cli_tests.rs  integration_tests.rs
tests-integration/: Cargo.toml
tests-integration/src/: main.rs
tests-integration/tests/: tmp_.tmptlsC49_src_lib_tests.rs
