[package]
name = "auto_test"
version = "0.1.1"
edition = "2021"
authors = ["m-e pasta <mepastacc@gmail.com>"]
description = "Automatically generate test stubs for Rust projects using AST analysis"
license = "MIT"
readme = "README.md"
# homepage = "https://github.com/m-epasta/auto_test"
repository = "https://github.com/m-epasta/auto_test"
# documentation = ""
keywords = ["testing", "ast", "codegen", "rust", "automation"]
categories = ["development-tools::testing", "development-tools::build-utils"]
exclude = ["test.ts", "help.md", "*.lock", "*.ts"]

[lib]
name = "auto_test"
path = "src/lib.rs"

[[bin]]
name = "auto_test"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
walkdir = "2"
syn = { version = "2", features = ["full"] }
quote = "1.0.42"
indicatif = "0.18.0"
thiserror = "1.0"
anyhow = "1.0"
config = "0.14"
serde_yaml = "0.9"
toml = "0.8"
glob = "0.3"
ignore = "0.4"
rayon = "1.8"
uuid = { version = "1.6", features = ["v4"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
